rozne dalsie rozsirenia
